# SAVIER---TRUST-LAYER

./: README.md  appsec_memory.db  demo.py  main.py  pyproject.toml  testNvidia.py  testopenai.py
appsec-agent/: pyproject.toml
appsec-agent/appsec_agent/: bootstrap.py  server.py
appsec-agent/appsec_agent/agents/: aggregation.py  quality_review.py  review_common.py
appsec-agent/appsec_agent/core/: config.py  (+1 more)
appsec-agent/docs/: .~lock.SAVIER_PROJECT_DOCUMENTATION.docx#  ARCHITECTURE_AND_EXTENSIBILITY.md  DEMO_SCRIPT.md  JUDGE_QA.md  SCALABILITY_AND_AGENT_INTEGRATION.md  SYSTEM_FLOW_DIAGRAM.md
appsec-agent/examples/: benchmark_providers.py
appsec-interceptor/: CHANGELOG.md  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
appsec-interceptor/src/: extension.ts
appsec_agent/: bootstrap.py  http_server.py  server.py
appsec_agent/agents/: coding.py  orchestrator.py  performance_review.py  planning.py  registry.py  security.py  security_review.py
appsec_agent/core/: __init__.py  config.py  models.py  plugins.py  taxonomy.py
appsec_agent/memory/: store.py
appsec_agent/providers/: __init__.py  nvidia.py  ollama.py
appsec_agent/services/: analysis.py
appsec_agent/tools/: registry.py
appsec_agent/transports/: common.py
docs/: PRESENTATION_CONTENT.md  PROJECT_OVERVIEW.md  SAVIER_PROJECT_DOCUMENTATION.docx  SAVIER_PROJECT_DOCUMENTATION.md  SETUP_AND_USAGE.md
examples/: flawed_full.py  flawed_performance.py  flawed_quality.py  flawed_security.py  run_manual_validation.py
tests/: test_foundation.py  test_provider.py
(+29 files in other folders)
