[project]
name = "appsec-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-nvidia-ai-endpoints>=1.2.1",
    "mcp>=1.26.0",
    "ollama>=0.6.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-languages>=1.10.2",
]
